@@ -22,12 +22,15 @@
 					"is_trusted" => true
 				));
 			} elseif (elgg_instanceof($entity, "group")) {
-				$result[] = ElggMenuItem::factory(array(
-					"name" => "best_practices",
-					"text" => elgg_echo("best_practices:menu:owner_block:group"),
-					"href" => "best_practice/group/" . $entity->getGUID() . "/all",
-					"is_trusted" => true
-				));
+				// group menu item depends on admin settings
+				if (!best_practices_use_predefined_groups() || (($group_guids = best_practices_get_predefined_group_guids()) && in_array($entity->getGUID(), $group_guids))) {
+					$result[] = ElggMenuItem::factory(array(
+						"name" => "best_practices",
+						"text" => elgg_echo("best_practices:menu:owner_block:group"),
+						"href" => "best_practice/group/" . $entity->getGUID() . "/all",
+						"is_trusted" => true
+					));
+				}
 			}
 		}
 		
